# start-project

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yaml  init.sh  run.sh
services/backend/: .env.example  .gitignore  Pipfile  README.md  gunicorn.py  pyproject.toml
services/backend/apps/jupyter/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
services/backend/apps/jupyter/jupyter_files/: hello_world.ipynb
services/backend/apps/jupyter/migrations/: 0001_initial.py
services/backend/apps/sphinx_docs/: __init__.py  admin.py  apps.py  models.py  tests.py  urls.py  views.py
services/backend/apps/sphinx_docs/migrations/: 0001_initial.py
services/backend/apps/testapp/: _models.py  admin.py  apps.py  factories.py  models.py  serializers.py  views.py
services/backend/apps/testapp/migrations/: 0003_alter_project_options.py  0005_comments_project_alter_comments_owner_and_more.py  0006_comments_created_at_comments_updated_at_and_more.py  0007_rename_comments_comment.py  0008_alter_comment_options_alter_comment_title.py  0010_comment_parent_id.py
services/backend/apps/testapp/models/: __init__.py  comment.py  project.py
services/backend/apps/testapp/serializers/: __init__.py  comment.py  project.py  user.py
services/backend/docs/: index.rst
services/backend/docs/apps/: index.rst
services/backend/docs/apps/testapp/: models.rst
services/backend/settings/: settings.py  urls.py
services/backend/tests/: __init__.py  conftest.py
services/backend/tests/integration/: __init__.py
services/backend/tests/unit/: __init__.py
(+26 files in other folders)
